添加NekoInventory